2008-08-08	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9054: remove email from default required fields
	* Fixed bug #8145: wrong links in notification mail if typo3 runs in a subdir of domain

2008-07-24	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed error in default template (###NO_COMMENTS### in the wrong place)

2008-07-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated function index in files
	* Released version 1.4.2
	* Fixed error with subparts
	* Released version 1.4.3

2008-06-03	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: wrong number of comments in tt_news (includes non-approved comments)

2008-05-14	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: hidden column defined for tx_comments_urllog but does not exist in the database

2008-05-05	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: strftime was never be used

2008-03-13	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #6999: Add sorting for comments
	* Fixed bug #7645: after entering bad code from captcha "content" is not loaded again into textarea
	* Fixed bug #7849: Grammar error in error.no.ts.template label
	* Fixed bug #7491: Typos in pi1/locallang_csh.xml
	* Fixed bug #7578: Translation not possible
	* Fixed bug #7680: ###TEXT_ENTER_CODE### not rendered with sr_freecap
	* Fixed bug #7675: Hook-Request: additional fields in record before save/processing

2008-02-25 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: tt_news marker cannot be localized

2008-02-21 Dmitry Dulepov  <dmitry@typo3.org>

	* Added URL log for future "List" feature
	* Changed storagePid to be a list of values (for "List" feature)

2008-02-20 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7593: Firstname replaced by Lastname
	* Fixed bug #7574: Pagebrowser ###LINK_LAST### not rendered

2008-02-14 Dmitry Dulepov  <dmitry@typo3.org>

	* Added lots of hooks
	* Released version 1.3.0

2008-02-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Added stdWrap properties for comment entries

2008-02-06 Dmitry Dulepov  <dmitry@typo3.org>
