@@ -101,20 +101,20 @@
 		<p>
 			<span class="tx-comments-required-mark">*</span> ###TEXT_REQUIRED_HINT###
 		</p>
-		<label for="tx_comments_pi1[firstname]">###TEXT_FIRST_NAME###</label>
+		<label for="tx_comments_pi1_firstname">###TEXT_FIRST_NAME###</label>
 		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[firstname]" id="tx_comments_pi1_firstname" value="###FIRSTNAME###" /> ###REQUIRED_FIRSTNAME### ###ERROR_FIRSTNAME###<br />
-		<label for="tx_comments_pi1[lastname]">###TEXT_LAST_NAME###</label>
+		<label for="tx_comments_pi1_lastname">###TEXT_LAST_NAME###</label>
 		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[lastname]" id="tx_comments_pi1_lastname" value="###LASTNAME###" /> ###REQUIRED_LASTNAME### ###ERROR_LASTNAME###<br />
-		<label for="tx_comments_pi1[email]">###TEXT_EMAIL###</label>
+		<label for="tx_comments_pi1_email">###TEXT_EMAIL###</label>
 		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[email]" id="tx_comments_pi1_email" value="###EMAIL###" /> ###REQUIRED_EMAIL### ###ERROR_EMAIL###<br />
-		<label for="tx_comments_pi1[homepage]">###TEXT_WEB_SITE###</label>
+		<label for="tx_comments_pi1_homepage">###TEXT_WEB_SITE###</label>
 		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[homepage]" id="tx_comments_pi1_homepage" value="###HOMEPAGE###" /> ###REQUIRED_HOMEPAGE### ###ERROR_HOMEPAGE###<br />
-		<label for="tx_comments_pi1[location]">###TEXT_LOCATION###</label>
+		<label for="tx_comments_pi1_location">###TEXT_LOCATION###</label>
 		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[location]" id="tx_comments_pi1_location" value="###LOCATION###" /> ###REQUIRED_LOCATION### ###ERROR_LOCATION###<br />
 		###CAPTCHA###
-		<label for="tx_comments_pi1[content]">###TEXT_CONTENT###</label>
+		<label for="tx_comments_pi1_content">###TEXT_CONTENT###</label>
 		<textarea cols="32" rows="7" name="tx_comments_pi1[content]" id="tx_comments_pi1_content">###CONTENT###</textarea> ###REQUIRED_CONTENT### ###ERROR_CONTENT###<br />
-		<label for="tx_comments_pi1[submit]">&nbsp;</label>
+		<label for="tx_comments_pi1_submit">&nbsp;</label>
 		<input type="submit" name="tx_comments_pi1[submit]" id="tx_comments_pi1_submit" value="###TEXT_SUBMIT###" />
 		<input type="reset" value="###TEXT_RESET###" />
 		###JS_USER_DATA###
