@@ -2,6 +2,7 @@
 
 	* Fixed bug #9054: remove email from default required fields
 	* Fixed bug #8145: wrong links in notification mail if typo3 runs in a subdir of domain
+	* Fixed bug #7926: small template error
 
 2008-07-24	Dmitry Dulepov	<dmitry@typo3.org>
 
